--- a/client/src/App.css
+++ b/client/src/App.css
@@ -174,7 +174,10 @@ div {
   }
 
 
-
+  .piece{
+    height: 90%;
+    width: 90%;
+  }
   .square-inner{
       color: black;
       background-color: white;
