update app.cs for highlighting

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -192,6 +192,10 @@ div {
       width: 9vh;
 
   }
+
+  .highlight{
+    background-color: greenyellow;
+  }
   .square-inner:active{
       font-size: 11vh;
       align-items: center;
