--- a/client/src/App.css
+++ b/client/src/App.css
@@ -130,6 +130,14 @@
   align-items: center;
 } */
 
+.turn{
+  display: grid;
+  grid-template-rows: 1fr;
+  align-items: center;
+  justify-content: center;
+  
+}
+
 div {
   -webkit-user-select: none;
   -moz-user-select: none;
