--- a/client/src/App.css
+++ b/client/src/App.css
@@ -230,7 +230,7 @@ div {
   }
 }
 
-@media (orientation:portrait){
+@media screen and (max-aspect-ratio: 13/9){
   .modal {
     width: 80%;
     margin:0 auto;
