--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,6 +34,7 @@
   left: 0%;
   height: 100%;
   width: 100%;
+
 }
 
 .turn{
@@ -106,6 +107,25 @@
     box-shadow: inset 200px 0 0 0.09px rgba(2, 19, 255, 0.5);
     border-color: rgb(60, 0, 255);
   }
+  @keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
+  .invalidMove{
+    box-shadow: inset 200px 0 0 0.09px rgba(255, 0, 0, 0.5);
+    border-color: rgb(93, 6, 0);
+    animation: shake 0.5s;
+  }
   .square-inner:active{
       font-size: 11vh;
       align-items: center;
@@ -123,6 +143,17 @@
       padding-left: 0vh;
       
   }
+
+  .chat-container{
+    position: absolute;
+    left: 60%;
+    top: 60%;
+    padding-top: 4.5vh;
+    padding-right: 4.5vh;
+    padding-bottom: 4.5vh;
+    padding-left: 0vh;
+    
+}
   .session-btn{
       width: 30%;
       margin: 0 auto;  
