--- a/client/src/App.css
+++ b/client/src/App.css
@@ -103,6 +103,29 @@
 
   }
 
+  .region0 {
+    background-color: white;
+    box-shadow: 0 0 0 0 rgba(255, 255, 255, 1);
+    animation: pulse-white 2s infinite;
+  }
+  
+  @keyframes pulse-white {
+    0% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    }
+    
+    70% {
+      transform: scale(1);
+      box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
+    }
+    
+    100% {
+      transform: scale(0.95);
+      box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+    }
+  }
+
   .highlight{
     box-shadow: inset 200px 0 0 0.09px rgba(2, 19, 255, 0.5);
     border-color: rgb(60, 0, 255);
