--- a/client/src/App.css
+++ b/client/src/App.css
@@ -168,6 +168,7 @@
   }
 
   .chat-container{
+    background-color: grey;
     position: absolute;
     left: 60%;
     top: 60%;
@@ -181,6 +182,31 @@
       width: 30%;
       margin: 0 auto;  
   }
+}
+
+.message-list {
+  max-width: 500px;
+  width: 100%;
+}
+
+.message-container {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem;
+  border-bottom: 1px solid #eeeeee;
+}
+
+.user, .date {
+  font-size: 0.625rem;
+  color: #888888;
+}
+
+.user {
+  min-width: 120px;
+}
+
+.message {
+  flex-grow: 1;
 }
 
 @media screen and (max-aspect-ratio: 13/9){
