--- a/client/src/App.css
+++ b/client/src/App.css
@@ -167,23 +167,37 @@
       
   }
 
-  .chat-container{
-    background-color: grey;
-    position: absolute;
-    left: 60%;
-    top: 60%;
-    padding-top: 4.5vh;
-    padding-right: 4.5vh;
-    padding-bottom: 4.5vh;
-    padding-left: 0vh;
-    
-}
   .session-btn{
       width: 30%;
       margin: 0 auto;  
   }
 }
+.chat-messages{
+  background-color: rgb(105, 105, 105);
+  position: absolute;
+  left: 60%;
+  height: 40%;
+  width: 25%;
+  top: 40%;
+  overflow: scroll;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.chat-messages::-webkit-scrollbar {
+  display: none;
+}
 
+/* Hide scrollbar for IE, Edge and Firefox */
+.chat-messages {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+
+.chat-input{
+  background-color: rgb(0, 0, 0);
+  position: absolute;
+  left: 60%;
+  top: 80%;
+}
 .message-list {
   max-width: 500px;
   width: 100%;
@@ -193,16 +207,16 @@
   display: flex;
   flex-direction: row;
   padding: 0.5rem;
-  border-bottom: 1px solid #eeeeee;
+  border-bottom: 1px solid #000000;
 }
 
 .user, .date {
   font-size: 0.625rem;
-  color: #888888;
+  color: #ffffff;
 }
 
 .user {
-  min-width: 120px;
+  min-width: 10%;
 }
 
 .message {
